--- a/index.css
+++ b/index.css
@@ -1,35 +1,44 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 200px;
-  width: 300px;
-}
-
 .food {
-
 }
 
 .pan {
-
+  transform-origin: 20% 60% 0;
+  animation: shake 2s infinite;
 }
 
 .shadow {
-    animation: pulse 2s infinite;
+  /* animation: pulse 2s infinite; */
+}
+
+@keyframes shake {
+  30% {
+    transform: rotate(-20deg);
+  }
+  35% {
+    transform: rotate(10deg);
+  }
+  50% {
+    transform: rotate(0deg);
+  }
+  80% {
+    transform: translateY(8px);
+  }
+  90% {
+    transform: translateY(0px);
+  }
 }
 
 @keyframes pulse {
-    0%{
-        transform: scale(0.5);
-        transform-origin: center;
-    }
-    50%{
-        transform: scale(1);
-        transform-origin: center;
-
-    }
-    100%{
-        transform: scale(0.5);
-        transform-origin: center;
-    }
+  0% {
+    transform: scale(0.5);
+    transform-origin: center;
+  }
+  50% {
+    transform: scale(1);
+    transform-origin: center;
+  }
+  100% {
+    transform: scale(0.5);
+    transform-origin: center;
+  }
 }
