--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 }
 
 .shadow {
-  animation: pulse 2s infinite;
+  animation: pulse 2s infinite ease-in-out;
 }
 
 @keyframes shake {
@@ -31,12 +31,14 @@
 @keyframes pulse {
   0% {
     transform: scaleX(1);
+    transform-origin: 50% 0 0;
   }
   50% {
-    transform: scaleX(0.6);
-    transform-origin: center center 0;
+    transform: scaleX(0.7);
+    transform-origin: 25% 0 0;
   }
   100% {
     transform: scaleX(1);
+    transform-origin: 50% 0 0;
   }
 }
