--- a/index.css
+++ b/index.css
@@ -1,72 +1,14 @@
-.food {
-  transform-origin: 30% 40%;
-  animation: loading 4s infinite;
+body {
+  align-items: center;
+  overflow: none;
+}
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.pan {
-  transform-origin: 20% 60% 0;
-  animation: shake 4s infinite;
+button {
+  margin: 20px 0px;
 }
-
-.shadow {
-  animation: pulse 4s infinite;
-}
-
-@keyframes loading {
-  0%,
-  30% {
-    visibility: hidden;
-    transform: rotate(-180deg);
-  }
-  35% {
-    visibility: visible;
-  }
-  39%,
-  41% {
-    transform: scaleX(0.9) rotate(0deg);
-  }
-  60% {
-    transform: rotate(180deg);
-  }
-  61%,
-  100% {
-    visibility: hidden;
-  }
-}
-
-@keyframes shake {
-  30% {
-    transform: rotate(-20deg);
-  }
-  35% {
-    transform: rotate(10deg);
-  }
-  50% {
-    transform: rotate(0deg);
-  }
-  80% {
-    transform: translateY(8px);
-  }
-  90% {
-    transform: translateY(0px);
-  }
-}
-
-@keyframes pulse {
-  0% {
-    transform: scaleX(1);
-    transform-origin: 50% 0 0;
-  }
-  50% {
-    transform: scaleX(0.7);
-    transform-origin: 25% 0 0;
-  }
-  90% {
-    transform: scaleX(1);
-    transform-origin: 50% 0 0;
-  }
-}
-
 .bounce {
   animation: bounce 2s infinite ease-in-out 1s;
 }
@@ -118,7 +60,7 @@
 }
 
 .scrolling-skyline {
-  background: url('skyline.svg') repeat-x;
+  background: url('assets/skyline.svg') repeat-x;
   overflow: hidden;
   position: relative;
   animation: slideshow 4s linear infinite;
@@ -139,4 +81,29 @@
   to {
     left: -200%;
   }
+}
+
+body {
+  width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+a {
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+
+  text-decoration: none;
+  color: initial;
+}
+
+.mix{
+  height: 200px;
+}
+
+.transport-animation{
+  height: 650px;
 }
