--- a/panflip.css
+++ b/panflip.css
@@ -1,68 +1,74 @@
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .food {
-    transform-origin: 30% 40%;
-    animation: loading 4s infinite;
+  transform-origin: 30% 40%;
+  animation: loading 4s infinite;
+}
+
+.pan {
+  transform-origin: 20% 60% 0;
+  animation: shake 4s infinite;
+}
+
+.shadow {
+  animation: pulse 4s infinite;
+}
+
+@keyframes loading {
+  0%,
+  30% {
+    visibility: hidden;
+    transform: rotate(-180deg);
   }
-  
-  .pan {
-    transform-origin: 20% 60% 0;
-    animation: shake 4s infinite;
+  35% {
+    visibility: visible;
   }
-  
-  .shadow {
-    animation: pulse 4s infinite;
+  39%,
+  41% {
+    transform: scaleX(0.9) rotate(0deg);
   }
-  
-  @keyframes loading {
-    0%,
-    30% {
-      visibility: hidden;
-      transform: rotate(-180deg);
-    }
-    35% {
-      visibility: visible;
-    }
-    39%,
-    41% {
-      transform: scaleX(0.9) rotate(0deg);
-    }
-    60% {
-      transform: rotate(180deg);
-    }
-    61%,
-    100% {
-      visibility: hidden;
-    }
+  60% {
+    transform: rotate(180deg);
   }
-  
-  @keyframes shake {
-    30% {
-      transform: rotate(-20deg);
-    }
-    35% {
-      transform: rotate(10deg);
-    }
-    50% {
-      transform: rotate(0deg);
-    }
-    80% {
-      transform: translateY(8px);
-    }
-    90% {
-      transform: translateY(0px);
-    }
+  61%,
+  100% {
+    visibility: hidden;
   }
-  
-  @keyframes pulse {
-    0% {
-      transform: scaleX(1);
-      transform-origin: 50% 0 0;
-    }
-    50% {
-      transform: scaleX(0.7);
-      transform-origin: 25% 0 0;
-    }
-    90% {
-      transform: scaleX(1);
-      transform-origin: 50% 0 0;
-    }
+}
+
+@keyframes shake {
+  30% {
+    transform: rotate(-20deg);
   }
+  35% {
+    transform: rotate(10deg);
+  }
+  50% {
+    transform: rotate(0deg);
+  }
+  80% {
+    transform: translateY(8px);
+  }
+  90% {
+    transform: translateY(0px);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: scaleX(1);
+    transform-origin: 50% 0 0;
+  }
+  50% {
+    transform: scaleX(0.7);
+    transform-origin: 25% 0 0;
+  }
+  90% {
+    transform: scaleX(1);
+    transform-origin: 50% 0 0;
+  }
+}
