--- a/index.css
+++ b/index.css
@@ -2,14 +2,16 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-h1 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Poppins, Helvetica, Arial, sans-serif;
 }
 
 button {
   margin: 20px 0px;
+}
+
+a {
+  font-family: Poppins, Helvetica, Arial, sans-serif;
+  text-decoration: none;
 }
 
 .mix {
@@ -33,7 +35,7 @@ button {
 }
 
 .scrolling-skyline {
-  background: url("assets/skyline.svg") repeat-x;
+  background: url('assets/skyline.svg') repeat-x;
   overflow: hidden;
   position: relative;
   animation: slideshow 4s linear infinite;
